static/css/main.css
/* ... */
/* Font stacks */
:root {
	--font_system_ui: system-ui, sans-serif;
	--font_transitional: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
	--font_old_style: 'Iowan Old Style', 'Palatino Linotype', 'URW Palladio L', P052, serif;
	--font_humanist: Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
	--font_geometric_humanist: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
	--font_classical_humanist: Optima, Candara, 'Noto Sans', source-sans-pro, sans-serif;
	--font_neo_grotesque: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
	--font_monospace_slab_serif: 'Nimbus Mono PS', 'Courier New', monospace;
	--font_monospace_code: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
	--font_industrial: Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif;
	--font_rounded_sans: ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand, Comfortaa, Manjari, 'Arial Rounded MT', 'Arial Rounded MT Bold', Calibri, source-sans-pro, sans-serif;
	--font_slab_serif: Rockwell, 'Rockwell Nova', 'Roboto Slab', 'DejaVu Serif', 'Sitka Small', serif;
	--font_antique: Superclarendon, 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif;
	--font_didone: Didot, 'Bodoni MT', 'Noto Serif Display', 'URW Palladio L', P052, Sylfaen, serif;
	--font_handwritten: 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
}


html {
	background-color: var(--page-background);
}

body {
	font-family: var(--font_system_ui);
	color: var(--main-text);
	-webkit-font-smoothing: antialiased;
	line-height: 1.5;
	margin: 0;
	font-size: 18px;
}

.site-header {
	margin-top: 60px;
	margin-bottom: 60px;
	text-align: center;
	padding: 0 20px;
}

.site-header a {
	text-decoration: none;
	border-bottom: none;
}

.site-header .profile_photo {
	border-radius: 100%;
	text-align: center;
	padding: 2px;
	border: 1px solid var(--profile-border);
	transition: transform 0.3s ease-in-out;
	width: 100px;
	height: auto;
}

.site-header .profile_photo:hover {
	transform: scale(1.25);
}

.site-header h1 {
	margin: 0;
}

.site-header nav ul {
	list-style-type: none;
	padding: 0;
}

.site-header nav ul li {
	display: inline;
	margin: 0 2px;
	line-height: 2.5;
	white-space: nowrap;
}

.site-header nav a {
	border: 1px solid var(--navigation-button-border);
	background-color: var(--navigation-button-background);
	color: var(--navigation-text);
	border-radius: 20px;
	padding: 0.5em 1em;
	font-size: 0.9em;
	font-weight: 500;
	transition: background-color 0.1s ease-in;
}

.site-header nav a:hover {
	border-color: var(--navigation-button-border-hover);
	background-color: var(--navigation-button-background-hover);
	color: var(--navigation-text-hover);
}

.site-header p, .page, .post-content, .post-preview, .post, .archive, .comments, .content-meta, .page-fold-content, footer {
	max-width: 700px;
	margin: 0 auto;
}

.page-content p, .page-content h1, .page-content h2, .page-content h3, .page-content h4, .page-content h5, .page-content h6, .page-content pre, .page-content blockquote, .page-content .post-date-wrapper, .page-content .reply-to, .microblog_conversation, .custom_footer, .page-content ul.bookshelf.bookshelf, .page-content .category-list, .site-nav, .quoteback-container, .gist, .tinylytics_countries {
	padding-left: 20px;
	padding-right: 20px;
}

.page-content ul, .page-content ol, .page-content dl {
	max-width: 680px;
	padding-left: 50px;
	padding-right: 20px;
}

.page-content .category-list {
	margin-top: 20px;
}

.page-content ul.bookshelf.bookshelf {
	padding-top: 20px;
}

.page-content li {
	margin-top: 15px;
	margin-bottom: 15px;
}

.page-content p {
	margin-top: 1em;
	margin-bottom: 1em;
}

.page-content img, .page-content video {
	display: block;
	width: 100%;
	max-width: 710px;
	padding-left: 0;
	height: auto;
	margin: 0 auto;
	margin-bottom: 20px;
}

.page-content h1 {
	font-size: 2em;
}

.page-content h1.category-title, .page-content h1.replies-title {
	margin-bottom: 50px;
}

.page-content h1.post-title {
	margin: 0 auto;
}

.page-content h1.post-title a {
	border: none;
	transition: border 0.1s ease-in;
}

.page-content h1.post-title a:hover {
	border-bottom: 2px solid var(--main-link-border-hover);
}

.page-content h1, .page-content h2, .page-content h3, .page-content h4, .page-content h5, .page-content h6 {
	margin-top: 1em;
	line-height: 1.3;
	color: var(--heading-color);
}

a {
	color: var(--main-link);
	text-decoration: none;
	border-bottom: 2px solid var(--main-link-border);
	transition: border-color 0.1s ease-in;
}

a:hover {
	border-color: var(--main-link-border-hover);
	color: var(--main-link);
}

.post-content a {
  word-break: break-word;
  overflow-wrap: break-word;
}

.without-title p:first-of-type {
	margin-top: 0;
}

hr {
	margin-top: 3em;
	margin-bottom: 3em;
	background-color: var(--hr);
	border: none;
	width: 60%;
	max-width: 400px;
	height: 5px;
	border-radius: 20px;
}

hr.article-break {
	width: auto;
	max-width: 100%;
	height: 1px;
	background-color: var(--hr);
	margin-top: 3em;
	margin-bottom: 3em;
	display: block;
	border: none;
}

a.post-date, .post-date-wrapper > time, .microblog_time a {
	opacity: 0.3;
	transition: opacity 0.1s ease-in;
	text-transform: uppercase;
	font-weight: 700;
	border: none;
}

a.post-date:hover, .microblog_time a:hover  {
	opacity: 1;
}

a.post-date:hover::after {
	content: " ∞";
}

a.read-more {
	border: none;
}

.post {
	margin-bottom: 2em;
}

h2.post-title {
	color: var(--main-link);
	margin-top: 0;
}

h2.post-title a {
	text-decoration: none;
	color: var(--main-link);
	border: none;
}

h2.post-title a:hover {
	border: none;
}

blockquote {
	border-left: 8px solid var(--blockquote-border);
	background-color: var(--blockquote-background);
	color: var(--blockquote-text);
	font-size: 0.95em;
	padding-top: 5px;
	padding-bottom: 5px;
	margin-left: 0;
}
/* ... */

